The fix for the stupid scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+::-webkit-scrollbar { 
+    display: none; 
+}
+
 ::selection{
   color:#66FFCC;
 }
